<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.maps.MapView
        android:id="@+id/map_view"
        android:layout_above="@+id/controls_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:apiKey="@string/google_maps_v1_api_key"
        />

    <View
        android:id="@+id/blink_view"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:layout_margin="20dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="#ff41a346"/>

    <LinearLayout
        android:baselineAligned="false"
        android:id="@+id/controls_layout"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#ff858585">

        <LinearLayout
            android:baselineAligned="false"
            android:layout_height="80dp"
            android:layout_width="match_parent">

            <LinearLayout
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:gravity="center">

                <View
                    android:id="@+id/zoom_in"
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:background="@drawable/zoom_in"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:gravity="center">

                <View
                    android:id="@+id/zoom_out"
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:background="@drawable/zoom_out"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_height="80dp"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/point_a"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:text="@string/point_a"/>

            <Button
                android:id="@+id/point_b"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:text="@string/point_b"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>